[package]
name = "jito-bundler"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["jito-bundler contributors"]
license = "MIT"
description = "Ergonomic Rust client for Jito block-engine bundles: fluent builder, tip oracle, region auto-select, retries, and JSON-RPC + gRPC transports."
documentation = "https://docs.rs/jito-bundler"
homepage = "https://github.com/jito-bundler/jito-bundler"
repository = "https://github.com/jito-bundler/jito-bundler"
readme = "README.md"
keywords = ["solana", "jito", "mev", "bundle", "block-engine"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies"]
exclude = [
    ".github/",
    "tests/fixtures/",
    "*.log",
]

[features]
default = ["tip-stream"]

# Enable the gRPC transport via tonic. Significantly faster than JSON-RPC but
# pulls in protobuf codegen at build time.
grpc = ["dep:tonic", "dep:prost", "dep:tokio-stream"]

# Enable the WebSocket-based tip-stream oracle (percentile queries, auto
# bumping).
tip-stream = ["dep:tokio-tungstenite", "dep:futures-util"]

# Expose Prometheus-compatible metrics under the `jito_bundler_*` namespace.
metrics = ["dep:metrics"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
bs58 = "0.5"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "2.0"
thiserror = "1"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1"
url = "2"

# Optional dependencies
tonic = { version = "0.12", optional = true, default-features = false, features = ["transport", "tls", "tls-roots", "codegen", "prost"] }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.24", optional = true, default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std"] }
metrics = { version = "0.23", optional = true }

[dev-dependencies]
anyhow = "1"
solana-client = "2.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "simple_bundle"
path = "examples/simple_bundle.rs"

[[example]]
name = "with_retries"
path = "examples/with_retries.rs"

[[example]]
name = "with_tip_oracle"
path = "examples/with_tip_oracle.rs"
required-features = ["tip-stream"]
